--- a/language/ja-JP/ja-JP.plg_system_imzopengraph.ini
+++ b/language/ja-JP/ja-JP.plg_system_imzopengraph.ini
@@ -11,31 +11,43 @@ PLG_SYSTEM_IMZOPENGRAPH_FIELD_SITENAME_LABEL="OG:サイト名"
 PLG_SYSTEM_IMZOPENGRAPH_FIELD_SITENAME_DESC="サイト名を指定します。"
 PLG_SYSTEM_IMZOPENGRAPH_FIELD_FBAPPID_LABEL="OG:FB_ID"
 PLG_SYSTEM_IMZOPENGRAPH_FIELD_FBAPPID_DESC="Facebook のアプリID を指定します。"
+PLG_SYSTEM_IMZOPENGRAPH_FIELD_CONTENT_OG_DEFAULT_LABEL="記事の OG 個別設定"
+PLG_SYSTEM_IMZOPENGRAPH_FIELD_CONTENT_OG_DEFAULT_DESC="記事の Open Graph 個別設定の「する/しない」のデフォルト値を指定します。「しない」にしても個々の記事で「する」に出来ます。"
 PLG_SYSTEM_IMZOPENGRAPH_FIELD_TWCARD_LABEL="Twitterカードタイプ"
 PLG_SYSTEM_IMZOPENGRAPH_FIELD_TWCARD_DESC="デフォルトのTwitterカードタイプを指定します。"
 PLG_SYSTEM_IMZOPENGRAPH_FIELD_TWSITE_LABEL="サイトのTwitterアカウント"
 PLG_SYSTEM_IMZOPENGRAPH_FIELD_TWSITE_DESC="デフォルトのサイトTwitterアカウントを指定します。"
 PLG_SYSTEM_IMZOPENGRAPH_FIELD_TWCREATOR_LABEL="ページのTwitterアカウント"
 PLG_SYSTEM_IMZOPENGRAPH_FIELD_TWCREATOR_DESC="デフォルトのページTwitterアカウントを指定します。"
-PLG_SYSTEM_IMZOPENGRAPH_XML_DESCRIPTION="サイトの Home（デフォルトページ）で使用する Open Graph Procotol 用のデータを指定します。<br />各記事用のデータは各記事で指定します。<br />各ページにデータがない場合は、ここで指定するデータが使用されます。"
+PLG_SYSTEM_IMZOPENGRAPH_FIELD_CONTENT_TW_DEFAULT_LABEL="記事の Twitter Card 個別設定"
+PLG_SYSTEM_IMZOPENGRAPH_FIELD_CONTENT_TW_DEFAULT_DESC="記事の Twitter Card 個別設定の「する/しない」のデフォルト値を指定します。「しない」にしても個々の記事で「する」に出来ます。"
+PLG_SYSTEM_IMZOPENGRAPH_XML_DESCRIPTION="Open Graph Procotol と Twitter Card 用のデータを指定します。<br />基本設定では、サイトの Home（デフォルトページ）で使用するデータを指定します。<br />各記事用のデータは各記事で指定します。記事以外のページはメニューで指定します。<br />各ページにデータがない場合は基本設定のデータが使用されます。"
 
 COM_PLUGINS_TWITTERCARD_FIELDSET_LABEL="Twitter Cards"
 
 COM_CONTENT_OPENGRAPH_FIELDSET_LABEL="Open Graph"
 COM_CONTENT_TWITTERCARD_FIELDSET_LABEL="Twitter Cards"
 
+PLG_CONTENT_IMZOPENGRAPH_FIELD_OG_ACTIVE_LABEL="Open Graph 個別指定"
+PLG_CONTENT_IMZOPENGRAPH_FIELD_TW_ACTIVE_LABEL="Twitter Card 個別指定"
+PLG_CONTENT_IMZOPENGRAPH_FIELD_OG_ACTIVE_DESC="この記事（アイテム）に Open Graph データを個別指定します。"
+PLG_CONTENT_IMZOPENGRAPH_FIELD_TW_ACTIVE_DESC="この記事（アイテム）に Twitter Card データを個別指定します。"
+PLG_CONTENT_IMZOPENGRAPH_FIELD_ACTIVE_YES="する"
+PLG_CONTENT_IMZOPENGRAPH_FIELD_ACTIVE_NO="しない"
 PLG_CONTENT_IMZOPENGRAPH_FIELD_TYPE_LABEL="ページのタイプ"
-PLG_CONTENT_IMZOPENGRAPH_FIELD_TYPE_DESC="個別のページのOGタイプを指定します。"
+PLG_CONTENT_IMZOPENGRAPH_FIELD_TYPE_DESC="個別にページのOGタイプを指定します。"
 PLG_CONTENT_IMZOPENGRAPH_FIELD_TITLE_LABEL="ページのタイトル"
-PLG_CONTENT_IMZOPENGRAPH_FIELD_TITLE_DESC="個別のページのOGタイトルを指定します。"
+PLG_CONTENT_IMZOPENGRAPH_FIELD_TITLE_DESC="個別にページのOGタイトルを指定します。指定しなければ記事（アイテム）のタイトルが使用されます。"
 PLG_CONTENT_IMZOPENGRAPH_FIELD_IMAGE_LABEL="ページのサムネイル画像"
-PLG_CONTENT_IMZOPENGRAPH_FIELD_IMAGE_DESC="個別のページのOGサムネイル画像を指定します。"
+PLG_CONTENT_IMZOPENGRAPH_FIELD_IMAGE_DESC="個別にページのOGサムネイル画像を指定します。指定しなければ記事（アイテム）から、イントロ画像 -> 記事全体の画像 -> 記事内の最初の画像 -> プラグイン基本設定で指定された画像の順に探します。"
 PLG_CONTENT_IMZOPENGRAPH_FIELD_DESC_LABEL="ページの説明"
-PLG_CONTENT_IMZOPENGRAPH_FIELD_DESC_DESC="個別のページのOG説明を指定します。"
+PLG_CONTENT_IMZOPENGRAPH_FIELD_DESC_DESC="個別にページのOG説明を指定します。指定しなければ、アイテムが記事の場合は記事の最初から半角240文字が使用されます。"
 PLG_CONTENT_IMZOPENGRAPH_FIELD_TWCARD_LABEL="Twitterカードタイプ"
-PLG_CONTENT_IMZOPENGRAPH_FIELD_TWCARD_DESC="個別のTwitterカードタイプを指定します。"
+PLG_CONTENT_IMZOPENGRAPH_FIELD_TWCARD_DESC="個別にTwitterカードタイプを指定します。"
 PLG_CONTENT_IMZOPENGRAPH_FIELD_TWSITE_LABEL="サイトTwitterアカウント"
-PLG_CONTENT_IMZOPENGRAPH_FIELD_TWSITE_DESC="個別のサイトTwitterアカウントを指定します。"
+PLG_CONTENT_IMZOPENGRAPH_FIELD_TWSITE_DESC="個別にサイトTwitterアカウントを指定します。指定しなければプラグイン基本設定が使用されます。"
 PLG_CONTENT_IMZOPENGRAPH_FIELD_TWCREATOR_LABEL="ページTwitterアカウント"
-PLG_CONTENT_IMZOPENGRAPH_FIELD_TWCREATOR_DESC="個別のページTwitterアカウントを指定します。"
+PLG_CONTENT_IMZOPENGRAPH_FIELD_TWCREATOR_DESC="個別にページTwitterアカウントを指定します。指定しなければプラグイン基本設定が使用されます。"
 
+COM_MENUS_OPENGRAPH_FIELDSET_LABEL="Open Graph"
+COM_MENUS_TWITTERCARD_FIELDSET_LABEL="Twitter Cards"
